<resources>
    <string name="app_name">Çanakkale Gezi Rehberi</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Şifre</string>
    <string name="signup_activity_signup">Kayıt Ol</string>
    <string name="girisyap_activity_login">Giriş Yap</string>
    <string name="sifrenimiunuttun_activity_login">Şifreni mi unuttun?</string>
    <string name="hesabinYokMu_activity_login">Hesabın yok mu?</string>
    <string name="kayitOl_activity_login">Kayıt ol!</string>
    <string name="yada_activity_login">ya da</string>
    <string name="girisYap_activity_signup">Giriş yap!</string>
    <string name="hesabinVarmi_activity_signup">Bir hesabın var mı?</string>
    <string name="username_activity_signup">İsim</string>
    <string name="onboarding_slide_1_title">Giriş yap ya da kaydol</string>
    <string name="onboarding_slide_1_desc">Kullanıcı girişi yaparak \n kendi oluşturduğun rotalara erişebilirsin.</string>
    <string name="onboarding_slide_2_title">Rotalarım</string>
    <string name="onboarding_slide_2_desc">Rotalarım kısmından satın aldığın \n anıtlarla kendine özel rotalarını \n oluşturabilirsin.</string>
    <string name="onboarding_slide_3_title">Çanakkale Zaferi</string>
    <string name="onboarding_slide_3_desc">Savaş hakkında kısmından \n tarihi zafer hakkında yeni bilgiler \n öğrenebilirsin.</string>
    <string name="onboarding_Atla_Text">Atla</string>
    <string name="onboarding_Sonraki_Text">Sonraki</string>
    <string name="yeniRotaOlustur_activityMyroutes">Yeni Rota Oluştur</string>
    <string name="createNewRoute_DescText">Sahip olduğun anıtları aşağıdan ekleyebilirsin. Daha \n fazlası için Anıtlar kısmını ziyaret et.</string>
    <string name="yeniRotaOlustur_fragment_newRoute">Yeni Rota Oluştur</string>
    <string name="hava_durumu">Hava Durumu</string>

    <string name="savas_hakkinda_desc">Çanakkale Savaşı veya Çanakkale Muharebeleri, I.Dünya Savaşı
         sırasında 1915–1916 yılları arasında Gelibolu Yarımadası’nda Osmnalı İmparatorluğu ile
        İtilaf Devletleri arasında yapılan deniz ve kara muharebeleridir. İtilaf Devletleri;
        Osmanlı İmparatorluğu\'nun başkenti İstanbul\’u alarak İstanbul ve Çanakkale boğazlarının
        kontrolünü ele geçirmek, Rusya\’yla güvenli bir erzak tedarik ve askeri ikmal yolu açmak,
        başkent İstanbul\′u zapt etmek suretiyle Almanya\′nın müttefiklerinden birini savaş dışı
        bırakarak İttifak Devletlerini zayıflatmak amaçları ile ilk hedef olarak Çanakkale
        Boğazı\'nı seçmişlerdir. Ancak saldırıları başarısız olmuş ve geri çekilmek zorunda
        kalmışlardır. Kara ve deniz savaşı sonucunda iki taraf da çok ağır kayıplar vermiştir.
    Osmanlı İmparatorluğu, Almanya\'nın Rusya\'ya savaş ilan ettiği 1 Ağustos 1914\'ün hemen
        ertesi günü, Almanya ile bir ittifak antlaşması imzalamıştır. Bu antlaşma,
        imparatorluğun eninde sonunda Almanya\'nın ana gücünü oluşturduğu 
        İttifak Devletleri safında fiilen savaşa gireceği anlamına gelmektedir. Enver Paşa,
        fiilen savaşa girmeyi, seferberliğin tamamlanmamış olması ve Çanakkale Boğazı savunmasının
        tamamlanmaması gibi gerekçelerle ertelemeye çalışmıştır. Ancak Almanya, bir an önce savaşa
        fiilen girilmesi için baskılarını sürdürmüştür. Bu baskılar, Akdeniz\'de Britanya donanması
        önünden çekilen Goeben ve Breslau savaş gemilerinin İstanbul\'a gelmesiyle bir oldubittiye
        getirilmişti. Daha sonra Osmanlı Donanması\'na bağlı bir grup gemiyle Karadeniz\'e açılan
        bu gemiler 27 Ekim 1914 tarihinde Rus limanlarını bombalayınca Rusya, Osmanlı
        İmparatorluğu\'na savaş ilan etmiştir.</string>
</resources>
