<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/usernameEdtText_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext_signup"
        android:drawableStart="@drawable/emailimage_activity_login"
        android:drawablePadding="16dp"
        android:elevation="4dp"
        android:hint="@string/username_activity_signup"
        android:inputType="textEmailAddress"
        android:minWidth="328dp"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authBackground_activity_signup"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/emailEdtText_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_edittext_signup"
        android:drawableStart="@drawable/emailimage_activity_login"
        android:drawablePadding="16dp"
        android:elevation="4dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:minWidth="328dp"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEdtText_activity_signup"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/passEdtText_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="252dp"
        android:background="@drawable/custom_edittext_signup"
        android:drawableStart="@drawable/passwordimage_activity_login"
        android:drawablePadding="16dp"
        android:elevation="4dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:minWidth="328dp"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdtText_activity_signup"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/registerButton_activity_signup"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@mipmap/registerbutton_activity_signup"
        android:minWidth="300dp"
        android:minHeight="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEdtText_activity_signup"
        app:layout_constraintVertical_bias="0.078" />
    <TextView
        android:id="@+id/hesabinVarmiTxt_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:minWidth="100dp"
        android:minHeight="12dp"
        android:text="@string/hesabinVarmi_activity_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton_activity_signup"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/girisyapTxt_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="50dp"
        android:minHeight="12dp"
        android:text="@string/girisYap_activity_signup"
        android:textColor="#F27E1E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hesabinVarmiTxt_activity_signup"
        app:layout_constraintTop_toBottomOf="@+id/registerButton_activity_signup"
        app:layout_constraintVertical_bias="0.129" />

    <ImageView
        android:id="@+id/authBackground_activity_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_register_background"
        android:minWidth="412dp"
        android:minHeight="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/appicon_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="90dp"
        android:minHeight="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/authBackground_activity_signup"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authBackground_activity_signup"
        app:srcCompat="@mipmap/gezirehappiconwhite" />

    <TextView
        android:id="@+id/girisyap_activity_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="85dp"
        android:minHeight="24dp"
        android:text="@string/signup_activity_signup"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/authBackground_activity_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appicon_activity_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

</androidx.constraintlayout.widget.ConstraintLayout>